<resources>
    <string name="app_name">Server Match</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="setup_restaurant_button">Set Up Restaurant</string>
    <string name="restaurant_login">LOGIN</string>
    <string name="restaurant_name"></string>
    <string name="restaurant_email"></string>
    <string name="restaurant_phone"></string>

    <string name="menu_menu">Menu</string>
    <string name="menu_frequent_customers">Frequent Customers</string>
    <string name="menu_add_customers">Add Customer</string>
    <string name="menu_add_menu_item">Add Menu Item</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>
    <string name="add_customer_button">Add Customer</string>
    <string name="add_customer_fname">First Name</string>
    <string name="add_customer_lname">Last Name</string>
    <string name="add_customer_email">Email</string>
    <string name="add_customer_phone">Phone Number</string>
    <string name="add_customer_receipt_text">I would like to receive receipts via text.</string>
    <string name="add_customer_receipt_email">I would like to receive receipts via email.</string>
    <string name="add_customer_submit">ADD CUSTOMER</string>

    <string name="new_item_name_text_field">Enter Item Name</string>
    <string name="new_item_cost_text_field">Enter Item Cost</string>
    <string name="new_item_description_text_field">Enter Item Description</string>
    <string name="new_item_add_button">Add Item</string>
    <string name="new_item_add_photo_button">Add Photo</string>
    <string name="add_filter_tags">Add Filters</string>
    <string name="filter_tags">Applied Filters</string>


    <string name="new_item_filter_1">Vegan</string>
    <string name="new_item_filter_2">Dairy Free</string>
    <string name="new_item_filter_3">Gluten Free</string>
    <string name="new_item_filter_4">Low-Carb</string>
    <string name="new_item_filter_5">Vegetarian</string>
    <string name="new_item_filter_6">Contains Shellfish</string>
    <string name="new_item_filter_7">Spicy</string>
    <string name="new_item_filter_8">High Protein</string>
    <string name="new_item_filter_9">Contains Nuts</string>
    <string name="new_item_filter_10">Contains Eggs</string>
    <string name="new_item_filter_11">Contains Fish</string>
    <string name="new_item_filter_12">Contains Dairy</string>
    <string name="new_item_filter_13">Soy Free</string>
    <string name="new_item_filter_14">Nut Free</string>
    <string name="new_item_filter_15">Contains Beef</string>
    <string name="new_item_filter_16">Contains Poultry</string>
    <string name="new_item_filter_17">Contains Pork</string>
    <string name="default_bill">$0.00</string>
    <string name="checkout_email">Enter in your email</string>

    <string name="description_back">Done</string>

    <string name="image_view_message">Before uploading, is this the correct image?</string>
    <string name="cancel_image_view">Cancel</string>
    <string name="confirm_image_view">Confirm</string>

    <string name="alert_dialog_title_menu_item">Image Upload</string>
    <string name="alert_dialog_message_menu_item">How would you like to upload your image?</string>
    <string name="alert_dialog_message_pos_button_menu_item">Camera</string>
    <string name="alert_dialog_message_neg_button_menu_item">Gallery</string>
    <string name="alert_dialog_message_neutral_button_menu_item">Cancel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="preference_key_theme" translatable="false">preference_key_theme</string>
    <string name="preference_theme_title">Theme</string>

    <string name="light_theme_name">Light theme</string>
    <string name="dark_theme_name">Dark theme</string>
    <string name="auto_battery_name">Auto battery</string>
    <string name="follow_system_name">Follow system</string>

    <string name="light_theme_value" translatable="false">Light</string>
    <string name="dark_theme_value" translatable="false">Dark</string>
    <string name="preferences">Select your preferences: </string>
    <string name="preferences_explanation">Disclaimer: This screen will only be dark when Dark Mode is forced in the OS settings in Android Q and above.</string>
</resources>
