<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_frequent_customers"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_frequent_customers" />
    </group>

    <item android:title="Tools">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_add_customer"
                    android:icon="@drawable/ic_customer_add"
                    android:title="@string/menu_add_customers" />

                <item
                    android:id="@+id/nav_add_menu_item"
                    android:icon="@drawable/ic_menu_add"
                    android:title="@string/menu_add_menu_item" />
            </group>
        </menu>
    </item>

</menu>
