<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu">

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.servermatch.cecs445.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_frequent_customers"
        android:name="com.example.servermatch.cecs445.ui.frequentcustomers.FrequentCustomersFragment"
        android:label="@string/menu_frequent_customers"
        tools:layout="@layout/fragment_frequent_customers" />

    <fragment
        android:id="@+id/nav_add_customer"
        android:name="com.example.servermatch.cecs445.ui.addcustomer.AddCustomerFragment"
        android:label="@string/menu_add_customers"
        tools:layout="@layout/fragment_add_customer" />

    <fragment
        android:id="@+id/nav_add_menu_item"
        android:name="com.example.servermatch.cecs445.ui.addmenuitem.AddMenuItemFragment"
        android:label="@string/menu_add_menu_item"
        tools:layout="@layout/fragment_add_menu_item"/>

    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.servermatch.cecs445.ui.setuprestaurant.SetupRestaurant"
        android:label="@string/menu_logout"
        tools:layout="@layout/activity_setup_restaurant"/>

    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.example.servermatch.cecs445.ui.checkout.CheckoutFragment"
        android:label="fragment_checkout2"
        tools:layout="@layout/fragment_checkout" />

    <fragment
        android:id="@+id/descriptionFragment"
        android:name="com.example.servermatch.cecs445.ui.description.DescriptionFragment"
        android:label="fragment_menu_item_description"
        tools:layout="@layout/fragment_menu_item_description" />
</navigation>